<resources>
    <string name="app_name">FallDetect</string>
    <string name="begin_test_label">Begin Test</string>
    <string name="start_test_label">Start Test</string>

    <string name="static_intro_label">Test 1 of 2</string>
    <string name="static_intro_description">For the first test, you will place your phone in your
        right pocket and stand upright with good posture for 20 seconds. Once you are ready, push
        the start button, place the phone in your pocket, stand upright with good posture, and wait
        for this phone to vibrate and ring until removing your phone from your pocket.</string>
    <string name="static_prepare_text1">Please put your phone in your right side pocket.</string>
    <string name="static_prepare_text2">This test will begin in: </string>


    <string name="intro_label">Test 2 of 2</string>
    <string name="intro_description">For the second test, you will place your phone in your pocket
        and perform a 30 second sit to stand chair test. Start seated, then stand up and sit down as
        many times as you can until the phone vibrates and rings. Then you may remove the phone from
        your pocket.</string>
    <string name="prepare_text1">Please put your phone in your right side pocket.</string>
    <string name="prepare_text2">This test will begin in: </string>

    <string name="start_again">Repeat Test</string>
    <string name="complete_text">Test Completed</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="file_provider_authority" translatable="false">aericks1.example.falldetect.fileprovider</string>
</resources>
